--- a/sidebar.css
+++ b/sidebar.css
@@ -214,6 +214,12 @@ body {
     color: var(--text);
 }
 
+.action-icon .action-gif {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 .action-label {
     font-size: 12px;
     font-weight: 600;
